Mus: GpuCompositorFrameSink uses WeakPtrFactory

A Surface can outlive the GpuCompositorFrameSink that created it.
Submitting a CompositorFrame to a surface means that the draw callback
could get called after GpuCompositorFrameSink is destroyed. By binding
the draw callback to a weak ptr we ensure we don't call it if
GpuCompositorFrameSink has been destroyed.

BUG=668420
TBR=yzshen@chromium.org, sadrul@chromium.org

Review-Url: https://codereview.chromium.org/2527203002
Cr-Commit-Position: refs/heads/master@{#434347}

Former-commit-id: 029f79a574a4e032561ac44a72746c95814487dc